--- a/frontend/src/app/inventory/product/product-detail.component.html
+++ b/frontend/src/app/inventory/product/product-detail.component.html
@@ -12,7 +12,7 @@
             </div>
             <div fxFlex.gt-xs="75" fxFlex="100">
               <div fxLayout="column">
-                <span>{{entity.nombre}}</span>
+                <span>{{entity.codigo}}</span>
               </div>
             </div>
 
@@ -29,36 +29,108 @@
 
             <div fxFlex.gt-xs="25" fxFlex="100">
               <div fxLayout="column">
-                <span class="font-bold">Precio de Venta:</span>
+                <span class="font-bold">Fecha de Expiración:</span>
               </div>
             </div>
             <div fxFlex.gt-xs="75" fxFlex="100">
               <div fxLayout="column">
-                <span>{{entity.precioVenta}}</span>
+                <span>{{entity.fechaExpiracion}}</span>
               </div>
             </div>
 
             <div fxFlex.gt-xs="25" fxFlex="100">
               <div fxLayout="column">
-                <span class="font-bold">Precio de Compra:</span>
+                <span class="font-bold">¿Es Favorito?:</span>
               </div>
             </div>
             <div fxFlex.gt-xs="75" fxFlex="100">
               <div fxLayout="column">
-                <span>{{entity.precioCompra}}</span>
+                <span>{{entity.esFavorito}}</span>
               </div>
             </div>
 
             <div fxFlex.gt-xs="25" fxFlex="100">
               <div fxLayout="column">
-                <span class="font-bold">Producto:</span>
+                <span class="font-bold">¿Visible para la Venta?:</span>
               </div>
             </div>
             <div fxFlex.gt-xs="75" fxFlex="100">
               <div fxLayout="column">
-                <span>{{entity.productos[0].codigo}}</span>
+                <span>{{entity.visibleParaLaVenta}}</span>
               </div>
             </div>
+
+            <div fxFlex.gt-xs="25" fxFlex="100">
+              <div fxLayout="column">
+                <span class="font-bold">Stock:</span>
+              </div>
+            </div>
+            <div fxFlex.gt-xs="75" fxFlex="100">
+              <div fxLayout="column">
+                <span>{{entity.stock}}</span>
+              </div>
+            </div>
+
+            <div fxFlex.gt-xs="25" fxFlex="100">
+              <div fxLayout="column">
+                <span class="font-bold">Notificación De Limite De Stock:</span>
+              </div>
+            </div>
+            <div fxFlex.gt-xs="75" fxFlex="100">
+              <div fxLayout="column">
+                <span>{{entity.notificacionDeLimiteDeStock}}</span>
+              </div>
+            </div>
+
+            <div fxFlex.gt-xs="25" fxFlex="100">
+              <div fxLayout="column">
+                <span class="font-bold">Tipo de producto:</span>
+              </div>
+            </div>
+            <div fxFlex.gt-xs="75" fxFlex="100">
+              <div fxLayout="column">
+                <span>{{entity.tipoDeProducto}}</span>
+              </div>
+            </div>
+
+            <div fxFlex.gt-xs="25" fxFlex="100">
+              <div fxLayout="column">
+                <span class="font-bold">Unidad De Medida:</span>
+              </div>
+            </div>
+            <div fxFlex.gt-xs="75" fxFlex="100">
+              <div fxLayout="column">
+                <span>{{entity.unidadDeMedida}}</span>
+              </div>
+            </div>
+
+            <div fxFlex.gt-xs="25" fxFlex="100">
+              <div fxLayout="column">
+                <span class="font-bold">Categoria:</span>
+              </div>
+            </div>
+            <div fxFlex.gt-xs="75" fxFlex="100">
+              <div fxLayout="column">
+                <div *ngIf="entity.categoriaId">
+                  <span>{{entity.categoriaNombre}}</span>
+                </div>
+              </div>
+            </div>
+
+            <div fxFlex.gt-xs="25" fxFlex="100">
+              <div fxLayout="column">
+                <span class="font-bold">Imagen:</span>
+              </div>
+            </div>
+            <div fxFlex.gt-xs="75" fxFlex="100">
+              <div fxLayout="column">
+                <div>
+                  <img [src]="'data:' + entity.imagenContentType + ';base64,' + entity.imagen" style="max-height: 100px;" *ngIf="entity.imagen" alt="entity image"/>
+                </div>
+              </div>
+            </div>
+
+
           </div>
         </form>
         <div class="p-10 text-right">
