--- a/frontend/src/app/inventory/product/product-update.component.html
+++ b/frontend/src/app/inventory/product/product-update.component.html
@@ -47,13 +47,49 @@
               </mat-form-field>
             </div>
 
+            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
+              <mat-checkbox class="example-margin p-10" [(ngModel)]="entity.esFavorito" [ngModelOptions]="{standalone: true}">¿Favorito?</mat-checkbox>
+              <mat-checkbox class="example-margin p-10" [(ngModel)]="entity.visibleParaLaVenta" [ngModelOptions]="{standalone: true}">¿Visible en Venta?</mat-checkbox>
+            </div>
+
             <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput [matDatepicker]="picker" placeholder="Fecha de Expiración" [formControl]="form.controls['fdate']">
+                <input matInput [matDatepicker]="picker" [(ngModel)]="entity.fechaExpiracion" placeholder="Fecha de Expiración" [formControl]="form.controls['fdate']">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
               </mat-form-field>
               <mat-hint *ngIf="form.controls['fdate'].errors?.date && form.controls['fdate'].touched" class="text-danger font-14">Debe incluir una fecha válida.</mat-hint>
+            </div>
+
+            <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
+              <mat-form-field>
+                <mat-select placeholder="Tipo de Producto" [(ngModel)]="entity.tipoDeProducto" name="productType">
+                  <mat-option *ngFor="let type of tiposDeProducto" [value]="type">
+                    {{type}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+
+            <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
+              <mat-form-field>
+                <mat-select placeholder="Unidad de medida" [(ngModel)]="entity.unidadDeMedida" name="unit">
+                  <mat-option *ngFor="let unit of unidadesDeMedida" [value]="unit">
+                    {{unit}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+
+            <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
+              <mat-form-field>
+                <mat-select placeholder="Categoria" [(ngModel)]="entity.categoriaId" name="category">
+                  <mat-option [value]="null"></mat-option>
+                  <mat-option *ngFor="let categoriaOption of categorias;" [value]="categoriaOption.id">
+                    {{categoriaOption.nombre}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
             </div>
 
             <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
