--- a/frontend/src/app/contact/employee/employee-update.component.html
+++ b/frontend/src/app/contact/employee/employee-update.component.html
@@ -3,7 +3,7 @@
     <div style="display: flex;">
       <div fxFlex.gt-xs="50" fxFlex="25" class="p-10" (click)="previousState()" style="cursor: pointer">
         <mat-icon>arrow_back</mat-icon>
-        <span class="goBackTag">Todos los Productos</span>
+        <span class="goBackTag">Todos los Empleados</span>
       </div>
 
       <div fxFlex.gt-xs="50" fxFlex="75" class="p-10 text-right">
@@ -16,13 +16,13 @@
 
     <mat-card>
       <mat-card-content>
-        <mat-card-title>Producto {{!entity.id ? 'Nuevo' : 'Edición'}} </mat-card-title>
+        <mat-card-title>Empleado {{!entity.id ? 'Nuevo' : 'Edición'}} </mat-card-title>
         <form class="basic-form">
           <div fxLayout="row wrap">
             <!-- column -->
             <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput placeholder="Nombre" name="nombre" [(ngModel)]="entity.codigo" [formControl]="form.controls['fnombre']">
+                <input matInput placeholder="Nombre" name="nombre" [(ngModel)]="entity.nombre" [formControl]="form.controls['fnombre']">
               </mat-form-field>
               <mat-hint *ngIf="form.controls['fnombre'].hasError('required') && form.controls['fnombre'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
               <mat-hint *ngIf="form.controls['fnombre'].hasError('maxlength') && form.controls['fnombre'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
@@ -30,42 +30,55 @@
 
             <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput placeholder="Descripción" name="descripcion" [(ngModel)]="entity.descripcion" [formControl]="form.controls['fdescripcion']">
+                <input matInput placeholder="Apellido" name="apellido" [(ngModel)]="entity.apellido" [formControl]="form.controls['fapellido']">
               </mat-form-field>
-              <mat-hint *ngIf="form.controls['fdescripcion'].hasError('maxlength') && form.controls['fdescripcion'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
+              <mat-hint *ngIf="form.controls['fapellido'].hasError('maxlength') && form.controls['fapellido'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
             </div>
 
-            <div fxFlex.gt-sm="25" fxFlex="100" class="p-10">
+            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput type="number" placeholder="Cantidad" name="cantidad" [(ngModel)]="entity.stock">
+                <input matInput type="number" placeholder="Dni" name="dni" [(ngModel)]="entity.dni" [formControl]="form.controls['fdni']">
               </mat-form-field>
+              <mat-hint *ngIf="form.controls['fdni'].hasError('required') && form.controls['fdni'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
+              <mat-hint *ngIf="form.controls['fdni'].hasError('maxlength') && form.controls['fdni'].touched" class="text-danger font-14">Dni Inválido</mat-hint>
             </div>
 
-            <div fxFlex.gt-sm="25" fxFlex="100" class="p-10">
+            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput type="number" placeholder="Límite de stock" name="cantidad" [(ngModel)]="entity.notificacionDeLimiteDeStock">
+                <input matInput placeholder="Dirección" name="direccion" [(ngModel)]="entity.direccion">
               </mat-form-field>
             </div>
 
             <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
-              <mat-checkbox class="example-margin p-10" [(ngModel)]="entity.esFavorito" [ngModelOptions]="{standalone: true}">¿Favorito?</mat-checkbox>
-              <mat-checkbox class="example-margin p-10" [(ngModel)]="entity.visibleParaLaVenta" [ngModelOptions]="{standalone: true}">¿Visible en Venta?</mat-checkbox>
+              <mat-form-field>
+                <input type="number" matInput placeholder="Teléfono" name="telefono" [(ngModel)]="entity.telefono" [formControl]="form.controls['ftelefono']">
+              </mat-form-field>
+              <mat-hint *ngIf="form.controls['ftelefono'].hasError('required') && form.controls['ftelefono'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
+              <mat-hint *ngIf="form.controls['ftelefono'].hasError('maxlength') && form.controls['ftelefono'].touched" class="text-danger font-14">Limite excedido</mat-hint>
             </div>
+
+            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
+              <mat-form-field>
+                <input matInput placeholder="Email" name="email" [(ngModel)]="entity.correo" [formControl]="form.controls['femail']">
+              </mat-form-field>
+              <small *ngIf="form.controls['femail'].errors?.email && form.controls['femail'].touched" class="text-danger font-14">Correo inválido</small>
+            </div>
+
 
             <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput [matDatepicker]="picker" [(ngModel)]="entity.fechaExpiracion" placeholder="Fecha de Expiración (mm/dd/yyyy)" [formControl]="form.controls['fdate']">
+                <input matInput [matDatepicker]="picker" [(ngModel)]="entity.fechaDeNacimiento" placeholder="Fecha de Nacimiento (mm/dd/yyyy)" [formControl]="form.controls['ffechaNacimiento']">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
               </mat-form-field>
-              <mat-hint *ngIf="form.controls['fdate'].errors?.date && form.controls['fdate'].touched" class="text-danger font-14">Debe incluir una fecha válida.</mat-hint>
+              <mat-hint *ngIf="form.controls['ffechaNacimiento'].errors?.date && form.controls['ffechaNacimiento'].touched" class="text-danger font-14">Debe incluir una fecha válida.</mat-hint>
             </div>
 
             <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
               <mat-form-field>
-                <mat-select placeholder="Tipo de Producto" [(ngModel)]="entity.tipoDeProducto" name="productType">
-                  <mat-option *ngFor="let type of tiposDeProducto" [value]="type">
-                    {{type}}
+                <mat-select placeholder="Sexo" [(ngModel)]="entity.sexo" name="sex">
+                  <mat-option *ngFor="let sex of sexos" [value]="sex">
+                    {{sex}}
                   </mat-option>
                 </mat-select>
               </mat-form-field>
@@ -73,20 +86,9 @@
 
             <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
               <mat-form-field>
-                <mat-select placeholder="Unidad de medida" [(ngModel)]="entity.unidadDeMedida" name="unit">
-                  <mat-option *ngFor="let unit of unidadesDeMedida" [value]="unit">
-                    {{unit}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-
-            <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
-              <mat-form-field>
-                <mat-select placeholder="Categoria" [(ngModel)]="entity.categoriaId" name="category">
-                  <mat-option [value]="null"></mat-option>
-                  <mat-option *ngFor="let categoriaOption of categorias;" [value]="categoriaOption.id">
-                    {{categoriaOption.nombre}}
+                <mat-select placeholder="Rol" [(ngModel)]="entity.rolEmpleado" name="role">
+                  <mat-option *ngFor="let role of roles" [value]="role">
+                    {{role}}
                   </mat-option>
                 </mat-select>
               </mat-form-field>
