--- a/src/main/webapp/app/entities/producto/producto-update.component.html
+++ b/src/main/webapp/app/entities/producto/producto-update.component.html
@@ -25,6 +25,21 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" for="field_nombre">Nombre</label>
+                    <input type="text" class="form-control" name="nombre" id="field_nombre"
+                        [(ngModel)]="producto.nombre" required maxlength="150"/>
+                    <div [hidden]="!(editForm.controls.nombre?.dirty && editForm.controls.nombre?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.nombre?.errors?.required">
+                        This field is required.
+                        </small>
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.nombre?.errors?.maxlength">
+                        This field cannot be longer than 150 characters.
+                        </small>
+                    </div>
+                </div>
+                <div class="form-group">
                     <label class="form-control-label" for="field_descripcion">Descripcion</label>
                     <input type="text" class="form-control" name="descripcion" id="field_descripcion"
                         [(ngModel)]="producto.descripcion" maxlength="150"/>
@@ -99,14 +114,14 @@
                         <option value="SERVICIOS">SERVICIOS</option>
                     </select>
                 </div>
+
                 <div class="form-group">
                     <label class="form-control-label" for="field_unidadDeMedida">Unidad De Medida</label>
-                    <select class="form-control" name="unidadDeMedida" [(ngModel)]="producto.unidadDeMedida" id="field_unidadDeMedida" >
-                        <option value="KILO">KILO</option>
-                        <option value="LITRO">LITRO</option>
+                    <select class="form-control" id="field_unidadDeMedida" name="unidadDeMedida" [(ngModel)]="producto.unidadDeMedidaId" >
+                        <option [ngValue]="null"></option>
+                        <option [ngValue]="unidadDeMedidaOption.id" *ngFor="let unidadDeMedidaOption of unidaddemedidas; trackBy: trackUnidadDeMedidaById">{{unidadDeMedidaOption.nombre}}</option>
                     </select>
                 </div>
-
                 <div class="form-group">
                     <label class="form-control-label" for="field_categoria">Categoria</label>
                     <select class="form-control" id="field_categoria" name="categoria" [(ngModel)]="producto.categoriaId" >
