--- a/src/main/webapp/app/entities/producto/producto.component.html
+++ b/src/main/webapp/app/entities/producto/producto.component.html
@@ -31,6 +31,7 @@
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="reset.bind(this)">
             <th jhiSortBy="id"><span>ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="codigo"><span>Codigo</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="nombre"><span>Nombre</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="descripcion"><span>Descripcion</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="fechaExpiracion"><span>Fecha Expiracion</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="esFavorito"><span>Es Favorito</span> <fa-icon [icon]="'sort'"></fa-icon></th>
@@ -39,7 +40,7 @@
             <th jhiSortBy="stock"><span>Stock</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="notificacionDeLimiteDeStock"><span>Notificacion De Limite De Stock</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="tipoDeProducto"><span>Tipo De Producto</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="unidadDeMedida"><span>Unidad De Medida</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="unidadDeMedidaNombre"><span>Unidad De Medida</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="categoriaNombre"><span>Categoria</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
@@ -48,6 +49,7 @@
             <tr *ngFor="let producto of productos ;trackBy: trackId">
                 <td><a [routerLink]="['/producto', producto.id, 'view' ]">{{producto.id}}</a></td>
                 <td>{{producto.codigo}}</td>
+                <td>{{producto.nombre}}</td>
                 <td>{{producto.descripcion}}</td>
                 <td>{{producto.fechaExpiracion | date:'mediumDate'}}</td>
                 <td>{{producto.esFavorito}}</td>
@@ -61,7 +63,11 @@
                 <td>{{producto.stock}}</td>
                 <td>{{producto.notificacionDeLimiteDeStock}}</td>
                 <td>{{producto.tipoDeProducto}}</td>
-                <td>{{producto.unidadDeMedida}}</td>
+                <td>
+                    <div *ngIf="producto.unidadDeMedidaId">
+                        <a [routerLink]="['../unidad-de-medida', producto.unidadDeMedidaId , 'view' ]" >{{producto.unidadDeMedidaNombre}}</a>
+                    </div>
+                </td>
                 <td>
                     <div *ngIf="producto.categoriaId">
                         <a [routerLink]="['../categoria', producto.categoriaId , 'view' ]" >{{producto.categoriaNombre}}</a>
