--- a/src/main/webapp/app/entities/usuario-externo/usuario-externo-update.component.html
+++ b/src/main/webapp/app/entities/usuario-externo/usuario-externo-update.component.html
@@ -40,9 +40,34 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" for="field_userType">User Type</label>
+                    <input type="text" class="form-control" name="userType" id="field_userType"
+                        [(ngModel)]="usuarioExterno.userType" required maxlength="150"/>
+                    <div [hidden]="!(editForm.controls.userType?.dirty && editForm.controls.userType?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.userType?.errors?.required">
+                        This field is required.
+                        </small>
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.userType?.errors?.maxlength">
+                        This field cannot be longer than 150 characters.
+                        </small>
+                    </div>
+                </div>
+                <div class="form-group">
                     <label class="form-control-label" for="field_role">Role</label>
                     <input type="text" class="form-control" name="role" id="field_role"
-                        [(ngModel)]="usuarioExterno.role" />
+                        [(ngModel)]="usuarioExterno.role" required maxlength="150"/>
+                    <div [hidden]="!(editForm.controls.role?.dirty && editForm.controls.role?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.role?.errors?.required">
+                        This field is required.
+                        </small>
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.role?.errors?.maxlength">
+                        This field cannot be longer than 150 characters.
+                        </small>
+                    </div>
                 </div>
 
             </div>
