--- a/src/main/webapp/app/entities/usuario-externo/usuario-externo.component.html
+++ b/src/main/webapp/app/entities/usuario-externo/usuario-externo.component.html
@@ -32,6 +32,7 @@
             <th jhiSortBy="id"><span>ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="dni"><span>Dni</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="pin"><span>Pin</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="userType"><span>User Type</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="role"><span>Role</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
@@ -41,6 +42,7 @@
                 <td><a [routerLink]="['/usuario-externo', usuarioExterno.id, 'view' ]">{{usuarioExterno.id}}</a></td>
                 <td>{{usuarioExterno.dni}}</td>
                 <td>{{usuarioExterno.pin}}</td>
+                <td>{{usuarioExterno.userType}}</td>
                 <td>{{usuarioExterno.role}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
