user maintenance integration

--- a/src/main/webapp/app/entities/usuario-externo/usuario-externo-detail.component.html
+++ b/src/main/webapp/app/entities/usuario-externo/usuario-externo-detail.component.html
@@ -13,6 +13,10 @@
                 <dd>
                     <span>{{usuarioExterno.pin}}</span>
                 </dd>
+                <dt><span>Id Entity</span></dt>
+                <dd>
+                    <span>{{usuarioExterno.idEntity}}</span>
+                </dd>
                 <dt><span>User Type</span></dt>
                 <dd>
                     <span>{{usuarioExterno.userType}}</span>
