fixes in products

--- a/frontend/src/app/inventory/product/product-detail.component.html
+++ b/frontend/src/app/inventory/product/product-detail.component.html
@@ -7,12 +7,23 @@
           <div fxLayout="row wrap">
             <div fxFlex.gt-xs="25" fxFlex="100">
               <div fxLayout="column">
-                <span class="font-bold">Nombre:</span>
+                <span class="font-bold">Código:</span>
               </div>
             </div>
             <div fxFlex.gt-xs="75" fxFlex="100">
               <div fxLayout="column">
                 <span>{{entity.codigo}}</span>
+              </div>
+            </div>
+
+            <div fxFlex.gt-xs="25" fxFlex="100">
+              <div fxLayout="column">
+                <span class="font-bold">Nombre:</span>
+              </div>
+            </div>
+            <div fxFlex.gt-xs="75" fxFlex="100">
+              <div fxLayout="column">
+                <span>{{entity.nombre}}</span>
               </div>
             </div>
 
@@ -27,38 +38,38 @@
               </div>
             </div>
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Fecha de Expiración:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{entity.fechaExpiracion}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Fecha de Expiración:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{entity.fechaExpiracion}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">¿Es Favorito?:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{entity.esFavorito}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">¿Es Favorito?:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{entity.esFavorito}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">¿Visible para la Venta?:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{entity.visibleParaLaVenta}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">¿Visible para la Venta?:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{entity.visibleParaLaVenta}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
 
             <div fxFlex.gt-xs="25" fxFlex="100">
               <div fxLayout="column">
@@ -73,7 +84,7 @@
 
             <div fxFlex.gt-xs="25" fxFlex="100">
               <div fxLayout="column">
-                <span class="font-bold">Notificación De Limite De Stock:</span>
+                <span class="font-bold">Stock Mínimo:</span>
               </div>
             </div>
             <div fxFlex.gt-xs="75" fxFlex="100">
