--- a/frontend/src/app/inventory/product/product.component.html
+++ b/frontend/src/app/inventory/product/product.component.html
@@ -40,7 +40,7 @@
               <mat-header-cell *matHeaderCellDef> Nombre </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <span class="header-label">Nombre:</span>
-                {{element.codigo}}
+                {{element.nombre}}
               </mat-cell>
             </ng-container>
 
