--- a/frontend/src/app/inventory/product/product-update.component.html
+++ b/frontend/src/app/inventory/product/product-update.component.html
@@ -22,7 +22,13 @@
             <!-- column -->
             <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput placeholder="Nombre" name="nombre" [(ngModel)]="entity.codigo" [formControl]="form.controls['fnombre']">
+                <input matInput placeholder="Codigo" name="codigo" [(ngModel)]="entity.codigo">
+              </mat-form-field>
+            </div>
+
+            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
+              <mat-form-field>
+                <input matInput placeholder="Nombre" name="nombre" [(ngModel)]="entity.nombre" [formControl]="form.controls['fnombre']">
               </mat-form-field>
               <mat-hint *ngIf="form.controls['fnombre'].hasError('required') && form.controls['fnombre'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
               <mat-hint *ngIf="form.controls['fnombre'].hasError('maxlength') && form.controls['fnombre'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
@@ -37,29 +43,29 @@
 
             <div fxFlex.gt-sm="25" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput type="number" placeholder="Cantidad" name="cantidad" [(ngModel)]="entity.stock">
+                <input matInput type="number" placeholder="Stock" name="cantidad" [(ngModel)]="entity.stock" [disabled]="entity.id">
               </mat-form-field>
             </div>
 
             <div fxFlex.gt-sm="25" fxFlex="100" class="p-10">
               <mat-form-field>
-                <input matInput type="number" placeholder="Límite de stock" name="cantidad" [(ngModel)]="entity.notificacionDeLimiteDeStock">
+                <input matInput type="number" placeholder="Stock Mínimo" name="cantidadMinima" [(ngModel)]="entity.notificacionDeLimiteDeStock" [disabled]="entity.id">
               </mat-form-field>
             </div>
 
-            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
-              <mat-checkbox class="example-margin p-10" [(ngModel)]="entity.esFavorito" [ngModelOptions]="{standalone: true}">¿Favorito?</mat-checkbox>
-              <mat-checkbox class="example-margin p-10" [(ngModel)]="entity.visibleParaLaVenta" [ngModelOptions]="{standalone: true}">¿Visible en Venta?</mat-checkbox>
-            </div>
+            <!--<div fxFlex.gt-sm="50" fxFlex="100" class="p-10">-->
+              <!--<mat-checkbox class="example-margin p-10" [(ngModel)]="entity.esFavorito" [ngModelOptions]="{standalone: true}">¿Favorito?</mat-checkbox>-->
+              <!--<mat-checkbox class="example-margin p-10" [(ngModel)]="entity.visibleParaLaVenta" [ngModelOptions]="{standalone: true}">¿Visible en Venta?</mat-checkbox>-->
+            <!--</div>-->
 
-            <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
-              <mat-form-field>
-                <input matInput [matDatepicker]="picker" [(ngModel)]="entity.fechaExpiracion" placeholder="Fecha de Expiración (mm/dd/yyyy)" [formControl]="form.controls['fdate']">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field>
-              <mat-hint *ngIf="form.controls['fdate'].errors?.date && form.controls['fdate'].touched" class="text-danger font-14">Debe incluir una fecha válida.</mat-hint>
-            </div>
+            <!--<div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">-->
+              <!--<mat-form-field>-->
+                <!--<input matInput [matDatepicker]="picker" [(ngModel)]="entity.fechaExpiracion" placeholder="Fecha de Expiración (mm/dd/yyyy)" [formControl]="form.controls['fdate']">-->
+                <!--<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>-->
+                <!--<mat-datepicker #picker></mat-datepicker>-->
+              <!--</mat-form-field>-->
+              <!--<mat-hint *ngIf="form.controls['fdate'].errors?.date && form.controls['fdate'].touched" class="text-danger font-14">Debe incluir una fecha válida.</mat-hint>-->
+            <!--</div>-->
 
             <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
               <mat-form-field>
