remove innecesary fields product

--- a/frontend/src/app/inventory/product/product-detail.component.html
+++ b/frontend/src/app/inventory/product/product-detail.component.html
@@ -93,16 +93,16 @@
               </div>
             </div>
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Tipo de producto:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{entity.tipoDeProducto}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Tipo de producto:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{entity.tipoDeProducto}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
 
             <div fxFlex.gt-xs="25" fxFlex="100">
               <div fxLayout="column">
