--- a/frontend/src/app/inventory/product/product-update.component.html
+++ b/frontend/src/app/inventory/product/product-update.component.html
@@ -13,107 +13,137 @@
         </div>
       </div>
     </div>
-
-    <mat-card>
-      <mat-card-content>
-        <mat-card-title>Producto {{!entity.id ? 'Nuevo' : 'Edición'}} </mat-card-title>
-        <form class="basic-form">
-          <div fxLayout="row wrap">
-            <!-- column -->
-            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
-              <mat-form-field>
-                <input matInput placeholder="Codigo" name="codigo" [(ngModel)]="entity.codigo">
-              </mat-form-field>
-            </div>
-
-            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
-              <mat-form-field>
-                <input matInput placeholder="Nombre" name="nombre" [(ngModel)]="entity.nombre" [formControl]="form.controls['fnombre']">
-              </mat-form-field>
-              <mat-hint *ngIf="form.controls['fnombre'].hasError('required') && form.controls['fnombre'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
-              <mat-hint *ngIf="form.controls['fnombre'].hasError('maxlength') && form.controls['fnombre'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
-            </div>
-
-            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
-              <mat-form-field>
-                <input matInput placeholder="Descripción" name="descripcion" [(ngModel)]="entity.descripcion" [formControl]="form.controls['fdescripcion']">
-              </mat-form-field>
-              <mat-hint *ngIf="form.controls['fdescripcion'].hasError('maxlength') && form.controls['fdescripcion'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
-            </div>
-
-            <div fxFlex.gt-sm="25" fxFlex="100" class="p-10">
-              <mat-form-field>
-                <input matInput type="number" placeholder="Stock" name="cantidad" [(ngModel)]="entity.stock" [disabled]="entity.id">
-              </mat-form-field>
-            </div>
-
-            <div fxFlex.gt-sm="25" fxFlex="100" class="p-10">
-              <mat-form-field>
-                <input matInput type="number" placeholder="Stock Mínimo" name="cantidadMinima" [(ngModel)]="entity.notificacionDeLimiteDeStock" [disabled]="entity.id">
-              </mat-form-field>
-            </div>
-
-            <!--<div fxFlex.gt-sm="50" fxFlex="100" class="p-10">-->
-              <!--<mat-checkbox class="example-margin p-10" [(ngModel)]="entity.esFavorito" [ngModelOptions]="{standalone: true}">¿Favorito?</mat-checkbox>-->
-              <!--<mat-checkbox class="example-margin p-10" [(ngModel)]="entity.visibleParaLaVenta" [ngModelOptions]="{standalone: true}">¿Visible en Venta?</mat-checkbox>-->
-            <!--</div>-->
-
-            <!--<div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">-->
-              <!--<mat-form-field>-->
-                <!--<input matInput [matDatepicker]="picker" [(ngModel)]="entity.fechaExpiracion" placeholder="Fecha de Expiración (mm/dd/yyyy)" [formControl]="form.controls['fdate']">-->
-                <!--<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>-->
-                <!--<mat-datepicker #picker></mat-datepicker>-->
-              <!--</mat-form-field>-->
-              <!--<mat-hint *ngIf="form.controls['fdate'].errors?.date && form.controls['fdate'].touched" class="text-danger font-14">Debe incluir una fecha válida.</mat-hint>-->
-            <!--</div>-->
-
-            <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
-              <mat-form-field>
-                <mat-select placeholder="Tipo de Producto" [(ngModel)]="entity.tipoDeProducto" name="productType">
-                  <mat-option *ngFor="let type of tiposDeProducto" [value]="type">
-                    {{type}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-
-            <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
-              <mat-form-field>
-                <mat-select placeholder="Unidad de medida" [(ngModel)]="entity.unidadDeMedida" name="unit">
-                  <mat-option *ngFor="let unit of unidadesDeMedida" [value]="unit">
-                    {{unit}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-
-            <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
-              <mat-form-field>
-                <mat-select placeholder="Categoria" [(ngModel)]="entity.categoriaId" name="category">
-                  <mat-option [value]="null"></mat-option>
-                  <mat-option *ngFor="let categoriaOption of categorias;" [value]="categoriaOption.id">
-                    {{categoriaOption.nombre}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-
-            <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
-                <div>
-                  <img [src]="'data:' + entity.imagenContentType + ';base64,' + entity.imagen" style="max-height: 100px;" *ngIf="entity.imagen" alt="entity image"/>
-                  <button *ngIf="entity.imagen" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="clearInputImage('imagen', 'imagenContentType', 'fileImage')">
-                    <mat-icon>close</mat-icon>
-                  </button>
-                  <input type="file" id="file_imagen" (change)="setFileData($event, entity, 'imagen', true)" accept="image/*"/>
-                </div>
-                <input type="hidden" class="form-control" name="imagen" id="field_imagen"
-                       [(ngModel)]="entity.imagen" />
-                <input type="hidden" class="form-control" name="imagenContentType" id="field_imagenContentType"
-                       [(ngModel)]="entity.imagenContentType" />
-            </div>
-          </div>
-        </form>
-      </mat-card-content>
-    </mat-card>
   </div>
+</div>
+
+<div fxLayout="row wrap">
+  <mat-card fxFlex.gt-lg="47" fxFlex.gt-md="47" fxFlex.gt-sm="47" fxFlex="100">
+    <mat-card-content>
+      <mat-card-title>Producto {{!entity.id ? 'Nuevo' : 'Edición'}} </mat-card-title>
+      <form class="basic-form">
+        <div fxLayout="row wrap">
+          <!-- column -->
+          <div fxFlex.gt-sm="100" fxFlex="100" class="p-10">
+            <mat-form-field>
+              <input matInput placeholder="Código de barras" name="codigo" [(ngModel)]="entity.codigo">
+            </mat-form-field>
+          </div>
+
+          <div fxFlex.gt-sm="100" fxFlex="100" class="p-10">
+            <mat-form-field>
+              <input matInput placeholder="Descripción" name="nombre" [(ngModel)]="entity.nombre" [formControl]="form.controls['fnombre']">
+            </mat-form-field>
+            <mat-hint *ngIf="form.controls['fnombre'].hasError('required') && form.controls['fnombre'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
+            <mat-hint *ngIf="form.controls['fnombre'].hasError('maxlength') && form.controls['fnombre'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
+          </div>
+
+          <!--<div fxFlex.gt-sm="50" fxFlex="100" class="p-10">-->
+            <!--<mat-form-field>-->
+              <!--<input matInput placeholder="Descripción" name="descripcion" [(ngModel)]="entity.descripcion" [formControl]="form.controls['fdescripcion']">-->
+            <!--</mat-form-field>-->
+            <!--<mat-hint *ngIf="form.controls['fdescripcion'].hasError('maxlength') && form.controls['fdescripcion'].touched" class="text-danger font-14">Límite Excedido</mat-hint>-->
+          <!--</div>-->
+
+          <!--<div fxFlex.gt-sm="25" fxFlex="100" class="p-10">-->
+            <!--<mat-form-field>-->
+              <!--<input matInput type="number" placeholder="Stock" name="cantidad" [(ngModel)]="entity.stock" [disabled]="entity.id">-->
+            <!--</mat-form-field>-->
+          <!--</div>-->
+
+          <!--<div fxFlex.gt-sm="25" fxFlex="100" class="p-10">-->
+            <!--<mat-form-field>-->
+              <!--<input matInput type="number" placeholder="Stock Mínimo" name="cantidadMinima" [(ngModel)]="entity.notificacionDeLimiteDeStock" [disabled]="entity.id">-->
+            <!--</mat-form-field>-->
+          <!--</div>-->
+
+          <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
+            <mat-form-field>
+              <mat-select placeholder="Unidad de medida" [(ngModel)]="entity.unidadDeMedida" name="unit">
+                <mat-option *ngFor="let unit of unidadesDeMedida" [value]="unit">
+                  {{unit}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <div fxFlex.gt-sm="50" fxFlex.gt-xs="100" fxFlex="100" class="p-10">
+            <mat-form-field>
+              <mat-select placeholder="Categoria" [(ngModel)]="entity.categoriaId" name="category">
+                <mat-option [value]="null"></mat-option>
+                <mat-option *ngFor="let categoriaOption of categorias;" [value]="categoriaOption.id">
+                  {{categoriaOption.nombre}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card fxFlex.gt-lg="47" fxFlex.gt-md="47" fxFlex.gt-sm="47" fxFlex="100">
+    <mat-card-content>
+      <mat-card-title>Imagen </mat-card-title>
+      <form class="basic-form">
+        <div fxLayout="row wrap">
+          <div fxFlex.gt-sm="50" fxFlex="100" class="p-10">
+            <div>
+              <img [src]="'data:' + entity.imagenContentType + ';base64,' + entity.imagen" style="max-height: 100px;" *ngIf="entity.imagen" alt="entity image"/>
+              <button *ngIf="entity.imagen" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="clearInputImage('imagen', 'imagenContentType', 'fileImage')">
+                <mat-icon>close</mat-icon>
+              </button>
+              <input type="file" id="file_imagen" (change)="setFileData($event, entity, 'imagen', true)" accept="image/*"/>
+            </div>
+            <input type="hidden" class="form-control" name="imagen" id="field_imagen"
+                   [(ngModel)]="entity.imagen" />
+            <input type="hidden" class="form-control" name="imagenContentType" id="field_imagenContentType"
+                   [(ngModel)]="entity.imagenContentType" />
+          </div>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card fxFlex.gt-lg="47" fxFlex.gt-md="47" fxFlex.gt-sm="47" fxFlex="100">
+    <mat-card-content>
+      <mat-card-title>Precios</mat-card-title>
+      <form class="basic-form">
+        <div fxLayout="row wrap">
+          <!-- column -->
+          <div fxFlex.gt-sm="100" fxFlex="100" class="p-10">
+            <mat-form-field>
+              <input matInput placeholder="Código de barras" name="codigo" [(ngModel)]="entity.codigo">
+            </mat-form-field>
+          </div>
+
+          <div fxFlex.gt-sm="100" fxFlex="100" class="p-10">
+            <mat-form-field>
+              <input matInput placeholder="Descripción" name="nombre" [(ngModel)]="entity.nombre" [formControl]="form.controls['fnombre']">
+            </mat-form-field>
+            <mat-hint *ngIf="form.controls['fnombre'].hasError('required') && form.controls['fnombre'].touched" class="text-danger font-14">Campo Requerido</mat-hint>
+            <mat-hint *ngIf="form.controls['fnombre'].hasError('maxlength') && form.controls['fnombre'].touched" class="text-danger font-14">Límite Excedido</mat-hint>
+          </div>
+
+          <!--<div fxFlex.gt-sm="50" fxFlex="100" class="p-10">-->
+          <!--<mat-form-field>-->
+          <!--<input matInput placeholder="Descripción" name="descripcion" [(ngModel)]="entity.descripcion" [formControl]="form.controls['fdescripcion']">-->
+          <!--</mat-form-field>-->
+          <!--<mat-hint *ngIf="form.controls['fdescripcion'].hasError('maxlength') && form.controls['fdescripcion'].touched" class="text-danger font-14">Límite Excedido</mat-hint>-->
+          <!--</div>-->
+
+          <div fxFlex.gt-sm="25" fxFlex="100" class="p-10">
+            <mat-form-field>
+              <input matInput type="number" placeholder="Stock" name="cantidad" [(ngModel)]="entity.stock" [disabled]="entity.id">
+            </mat-form-field>
+          </div>
+
+          <div fxFlex.gt-sm="25" fxFlex="100" class="p-10">
+            <mat-form-field>
+              <input matInput type="number" placeholder="Stock Mínimo" name="cantidadMinima" [(ngModel)]="entity.notificacionDeLimiteDeStock" [disabled]="entity.id">
+            </mat-form-field>
+          </div>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
 </div>
