--- a/src/main/webapp/app/entities/producto/producto-update.component.html
+++ b/src/main/webapp/app/entities/producto/producto-update.component.html
@@ -51,26 +51,6 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_fechaExpiracion">Fecha Expiracion</label>
-                    <div class="input-group">
-                        <input id="field_fechaExpiracion" type="text" class="form-control" name="fechaExpiracion" ngbDatepicker  #fechaExpiracionDp="ngbDatepicker" [(ngModel)]="producto.fechaExpiracion"
-                        />
-                        <span class="input-group-append">
-                            <button type="button" class="btn btn-secondary" (click)="fechaExpiracionDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
-                        </span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" for="field_esFavorito">Es Favorito</label>
-                    <input type="checkbox" class="form-control" name="esFavorito" id="field_esFavorito"
-                        [(ngModel)]="producto.esFavorito" />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" for="field_visibleParaLaVenta">Visible Para La Venta</label>
-                    <input type="checkbox" class="form-control" name="visibleParaLaVenta" id="field_visibleParaLaVenta"
-                        [(ngModel)]="producto.visibleParaLaVenta" />
-                </div>
-                <div class="form-group">
                     <label class="form-control-label" for="field_imagen">Imagen</label>
                     <div>
                         <img [src]="'data:' + producto.imagenContentType + ';base64,' + producto.imagen" style="max-height: 100px;" *ngIf="producto.imagen" alt="producto image"/>
@@ -108,17 +88,11 @@
                         [(ngModel)]="producto.notificacionDeLimiteDeStock" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_tipoDeProducto">Tipo De Producto</label>
-                    <select class="form-control" name="tipoDeProducto" [(ngModel)]="producto.tipoDeProducto" id="field_tipoDeProducto" >
-                        <option value="BIENES">BIENES</option>
-                        <option value="SERVICIOS">SERVICIOS</option>
-                    </select>
-                </div>
-                <div class="form-group">
                     <label class="form-control-label" for="field_unidadDeMedida">Unidad De Medida</label>
                     <select class="form-control" name="unidadDeMedida" [(ngModel)]="producto.unidadDeMedida" id="field_unidadDeMedida" >
                         <option value="KILO">KILO</option>
                         <option value="LITRO">LITRO</option>
+                        <option value="UNIDAD">UNIDAD</option>
                     </select>
                 </div>
 
