remove innecesary fields product and fix

--- a/src/main/webapp/app/entities/producto/producto-detail.component.html
+++ b/src/main/webapp/app/entities/producto/producto-detail.component.html
@@ -38,6 +38,14 @@
                 <dd>
                     <span>{{producto.unidadDeMedida}}</span>
                 </dd>
+                <dt><span>Precio Venta</span></dt>
+                <dd>
+                    <span>{{producto.precioVenta}}</span>
+                </dd>
+                <dt><span>Precio Compra</span></dt>
+                <dd>
+                    <span>{{producto.precioCompra}}</span>
+                </dd>
                 <dt><span>Categoria</span></dt>
                 <dd>
                     <div *ngIf="producto.categoriaId">
